--- a/about us.html
+++ b/about us.html
@@ -7,14 +7,10 @@ Melbourne Indie Films
 	<head>
 		<meta chaset="UTF-8">
 		<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
-<<<<<<< HEAD
+
 		 <link rel = "stylesheet" type="text/css" href="stylesheet1.css"/>
-		 
-=======
-		 <link rel = "stylesheet" type="text/css" href="formatstyles.css"/>
-		 <link rel = "stylesheet" type="text/css" href="layoutstyles.css"/>
-     <link rel = "stylesheet" type="text/css" href="stylesheet1.css"/>
->>>>>>> origin/master
+	
+
 		 <script type="text/javascript">
 </script>
 
@@ -46,9 +42,14 @@ Melbourne Indie Films
   <button class="left-button" onclick="plusDivs(-1)">&#10094;</button>
   <button class="righ-button" onclick="plusDivs(1)">&#10095;</button>
   <p><i> Looking for interesting things to do for the weekend ? </i></p>
-  <p> We are here to help you exploring indie films at extraordinary venues around you that you may not even be aware of ! </p>
+  <p> We are here to help you explore indie films at extraordinary venues around you that you may not even be aware of ! </p>
 
-
+<div id ="footer">
+    <ul>
+      <li><a href="http://www.facebook.com">Facebook</a></li>
+      <li><a href="http://www.instagram.com">Instagram</a></li>
+    </ul>
+  </div>
 </div>
 
 <script>
