--- a/homepage.html
+++ b/homepage.html
@@ -45,12 +45,12 @@ body, html {
 </ul>
 
                 </div>
-
+<div class = "container"></div>
 <div class="bg">
 
   <div class = venue-button>
   <p> Can't decide on a movie? Choose a Venue <br/ >
-  <a href="venue.html">
+  <a href="venues.html">
   <img border="0" alt="venue" src="images/venues/theatre.jpg" width="400" height = "400"> </a>
   </p>
   </div>
@@ -62,6 +62,7 @@ body, html {
    <img border="0" alt="movie" src="images/movies/dyinglight.jpg" width="200" height="400"> </a>
 </p>
 </div>
+
 
  <h2><span>Melbourne Indie Films:<span class = 'spacer'></span><br /><span class = 'spacer'></span> Indie Films at Indie Venues</span>
 	 </h2>
@@ -80,6 +81,8 @@ body, html {
  <li><a href="http://www.facebook.com">Facebook</a></li>
 
  <li><a href="http://www.instagram.com">Instagram</a></li>
+
+ <li style = "float:right"> Copyright 2017 Melbourne Indie Films Australia. All Rights Reserved. </li>
   
   </ul>
  	</div>
