--- a/thegodmother.html
+++ b/thegodmother.html
@@ -25,7 +25,7 @@
 	<div class="movie_info">
 		<img src="images/movies/godmother.jpg" />
 		<div class="ticket_info">
-				<form action="cart.php" method="post">
+				<form action="cart.html" method="post">
 				<select>
 					<option value="richmond">Richmond</option>
 					<option value="stkilda">St Kilda</option>
