--- a/catalogue.html
+++ b/catalogue.html
@@ -40,10 +40,12 @@
 			<li style="float:right"><a class="active" href="login.html">Login/Register</a></li>
 		</ul>
 	</div>
+
 	<div class="catalogue_title">
 		<h1>Movie Catalogue</h1>
 	</div>
 	<ul class="movie_gallery">
+	
 		<li>
 			<img src="images/movies/godmother.jpg" alt="The Godmother"/>
 			<div class="movie_title">
@@ -95,6 +97,7 @@
 		<ul>
 			<li><a href="http://www.facebook.com">Facebook</a></li>
 			<li><a href="http://www.instagram.com">Instagram</a></li>
+			<li style = "float:right"> Copyright 2017 Melbourne Indie Films Australia. All Rights Reserved. </li>
 		</ul>
 	</div>
 </body>
