--- a/venues.html
+++ b/venues.html
@@ -12,7 +12,8 @@
 	<div id="wrapper">
 		<ul>
 			<li><a class="active" href="homepage.html">Home</a></li>
-			<li><a href="catalogue.html">Catalogue</a></li>
+			<li><a href="catalogue.html">Movies</a></li>
+			<li><a href="venues.html">Venues</a></li>
 			<li><a href="about us.html">About Us</a></li>
 			<li><a href="contact us.html">Contact Us</a></li>
 			<li style ="float:right"><a href="cart.html"><img src = "images/shoppingcart.png" alt = "shopping cart logo" style = "width:15px;height:15px; float:right"></a></li>
@@ -66,6 +67,7 @@
 		<ul>
 			<li><a href="http://www.facebook.com">Facebook</a></li>
 			<li><a href="http://www.instagram.com">Instagram</a></li>
+			<li style = "float:right"> Copyright 2017 Melbourne Indie Films Australia. All Rights Reserved. </li>
 		</ul>
 	</div>
 </body>
