--- a/checkout.html
+++ b/checkout.html
@@ -1,56 +1,100 @@
 <!DOCTYPE html>
-
 <html>
-<title> 
-    Melbourne Indie Films
-</title> 
 <head>
-    <meta chaset="UTF-8">
-    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
-    <link rel = "stylesheet" type="text/css" href="style-checkout.css"/>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Melbourne Indie Films</title>
+
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
+    <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="checkout.css">
     <link rel = "stylesheet" type="text/css" href="formatstyles.css"/>
-         <link rel = "stylesheet" type="text/css" href="layoutstyles.css"/>
-     <link rel = "stylesheet" type="text/css" href="stylesheet1.css"/>
-    <script type="text/javascript">
-
-    </script>
-
+    <link rel = "stylesheet" type="text/css" href="layoutstyles.css"/>
+    <link rel = "stylesheet" type="text/css" href="stylesheet1.css"/>
 </head>
 
 <body>
-<div id="banner">
-        <img src="images/banner.jpg" alt="banner">
+  <div id="banner">
+    <img src="images/banner.jpg" alt="banner">
+  </div>
+  <div id="wrapper">
+   <div id = "header">
+    <ul>
+      <li><a class="active" href="homepage.html">Home</a></li>
+      <li><a href="catalogue.html">Catalogue</a></li>
+      <li><a href="about us.html">About Us</a></li>
+      <li><a href="contact us.html">Contact Us</a></li>
+      <li style ="float:right"><a href="cart.html"><img src = "images/shoppingcart.png" alt = "shopping cart logo" style = "width:15px;height:15px; float:right"></a></li>
+      <li style="float:right"><a class="active" href="login.html">Login/Register</a></li>
+    </ul>
+  </div>
+
+  <!-- The HTML for our form will go here -->
+  <div class="creditCardForm">
+    <div class="heading">
+        <h1>Confirm Purchase</h1>
     </div>
-    <div id="wrapper">
-     <div id = "header">
-        <ul>
-  <li><a class="active" href="homepage.html">Home</a></li>
-  <li><a href="catalogue.html">Catalogue</a></li>
-  <li><a href="about us.html">About Us</a></li>
-  <li><a href="contact us.html">Contact Us</a></li>
-  <li style ="float:right"><a href="cart.html"><img src = "images/shoppingcart.png" alt = "shopping cart logo" style = "width:15px;height:15px; float:right"></a></li>
-  <li style="float:right"><a class="active" href="login.html">Login/Register</a></li>
-            </ul>
- </div>
- <form class="checkout">
-    <div class="checkout-header">
-      <h1 class="checkout-title">
-        Checkout
-        <span class="checkout-price">$10</span>
-      </h1>
+    <div class="payment">
+        <form>
+            <div class="form-group owner">
+                <label for="owner">Owner</label>
+                <input type="text" class="form-control" id="owner">
+            </div>
+            <div class="form-group CVV">
+                <label for="cvv">CVV</label>
+                <input type="text" class="form-control" id="cvv">
+            </div>
+            <div class="form-group" id="card-number-field">
+                <label for="cardNumber">Card Number</label>
+                <input type="text" class="form-control" id="cardNumber">
+            </div>
+            <div class="form-group" id="expiration-date">
+                <label>Expiration Date</label>
+                <select>
+                    <option value="01">January</option>
+                    <option value="02">February </option>
+                    <option value="03">March</option>
+                    <option value="04">April</option>
+                    <option value="05">May</option>
+                    <option value="06">June</option>
+                    <option value="07">July</option>
+                    <option value="08">August</option>
+                    <option value="09">September</option>
+                    <option value="10">October</option>
+                    <option value="11">November</option>
+                    <option value="12">December</option>
+                </select>
+                <select>
+                    <option value="16"> 2016</option>
+                    <option value="17"> 2017</option>
+                    <option value="18"> 2018</option>
+                    <option value="19"> 2019</option>
+                    <option value="20"> 2020</option>
+                    <option value="21"> 2021</option>
+                </select>
+            </div>
+            <div class="form-group" id="credit_cards">
+                <img src="images/visa.jpg" id="visa">
+                <img src="images/mastercard.jpg" id="mast">
+                <img src="images/amex.jpg" id="amex">
+            </div>
+            <div class="form-group" id="pay-now">
+                <button type="submit" class="btn btn-default" id="confirm-purchase">Confirm</button>
+                <a href="thankyou.html"> NEXT </a>
+            </div>
+        </form>
     </div>
-    <p>
-      <input type="text" class="checkout-input checkout-name" placeholder="Your name" autofocus>
-      <input type="text" class="checkout-input checkout-exp" placeholder="MM">
-      <input type="text" class="checkout-input checkout-exp" placeholder="YY">
-    </p>
-    <p>
-      <input type="text" class="checkout-input checkout-card" placeholder="4111 1111 1111 1111">
-      <input type="text" class="checkout-input checkout-cvc" placeholder="CVC">
-    </p>
-    <p>
-      <input type="submit" value="Purchase" class="checkout-btn">
-    </p>
-  </form>
-  </body>
+</div>
+<div id ="footer">
+    <ul>
+      <li><a href="http://www.facebook.com">Facebook</a></li>
+      <li><a href="http://www.instagram.com">Instagram</a></li>
+    </ul>
+  </div>
+
+    
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+    <script src="jquery.checkout.min.js" charset="utf-8"></script>
+    <script src="checkout-script.js"></script>
+</body>
 </html>
