--- a/login.html
+++ b/login.html
@@ -8,27 +8,27 @@
 		<meta chaset="UTF-8">
 		
 		<link rel = "stylesheet" type="text/css" href="login-style.css"/>
-		<link rel = "stylesheet" type="text/css" href="formatstyles.css"/>
+		<link rel="stylesheet" type="text/css" href="stylesheet.css" />
 		
 		<style>
-  body, html {
-    height: 100%;
-    margin: 0;
-}
+			body, html {
+				height: 100%;
+				margin: 0;
+			}
 
-.bg {
-    /* The image used */
-    background-image: url("images/cinema.jpg");
+			.bg {
+				/* The image used */
+				background-image: url("images/cinema.jpg");
 
-    /* Full height */
-    height: 50%; 
+				/* Full height */
+				height: 50%; 
 
-    /* Center and scale the image nicely */
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-}
-</style>
+				/* Center and scale the image nicely */
+				background-position: center;
+				background-repeat: no-repeat;
+				background-size: cover;
+			}
+		</style>
 		<script src="login-script.js"></script>
 
 	</head>
@@ -44,38 +44,45 @@
 					<li><a class="active" href="homepage.html">Home</a></li>
 					<li><a href="catalogue.html">Catalogue</a></li>
 					<li><a href="catalogue.html">Movies</a></li>
-			<li><a href="venues.html">Venues</a></li>
+					<li><a href="venues.html">Venues</a></li>
 					<li><a href="contact us.html">Contact Us</a></li>
 					<li style ="float:right"><a href="cart.html"><img src = "images/shoppingcart.png" alt = "shopping cart logo" style = "width:15px;height:15px; float:right"></a></li>
-			<li style="float:right"><a class="active" href="login.html">Login/Register</a></li>
-		</ul>
+					<li style="float:right"><a class="active" href="login.html">Login/Register</a></li>
+				</ul>
 			</div>
-<div class="bg">
+			<div class="bg">
 
-			<div class="login-page">
-				<div class="form">
-					<form class="register-form">
-						<h1> REGISTER </h1>
-						<input type="text" placeholder="name"/>
-						<input type="password" placeholder="password"/>
-						<input type="text" placeholder="email address"/>
-						<button>create</button>
-						<p class="message">Already registered? <a href="#">Sign In</a></p>
-					</form>
+				<div class="login-page">
+					<div class="form">
+						<form class="register-form">
+							<h1> REGISTER </h1>
+							<input type="text" placeholder="name"/>
+							<input type="password" placeholder="password"/>
+							<input type="text" placeholder="email address"/>
+							<button>create</button>
+							<p class="message">Already registered? <a href="#">Sign In</a></p>
+						</form>
+					</div>
+
+					<div class="form">
+						<form class="login-form">
+							<h1> LOG IN </h1>
+							<input type="text" placeholder="username"/>
+							<input type="password" placeholder="password"/>
+							<button>login</button>
+							<p class="message">Not registered? <a href="#">Create an account</a></p>
+						</form>
+					</div>
 				</div>
-
-				<div class="form">
-					<form class="login-form">
-						<h1> LOG IN </h1>
-						<input type="text" placeholder="username"/>
-						<input type="password" placeholder="password"/>
-						<button>login</button>
-						<p class="message">Not registered? <a href="#">Create an account</a></p>
-					</form>
+				<div id ="footer">
+					<ul>
+						<li><a href="http://www.facebook.com">Facebook</a></li>
+						<li><a href="http://www.instagram.com">Instagram</a></li>
+					</ul>
 				</div>
 			</div>
 		</body>
 
-<!--Reference: https://codepen.io/colorlib/pen/rxddKy?editors=1100 !-->
+		<!--Reference: https://codepen.io/colorlib/pen/rxddKy?editors=1100 !-->
 
-</HTML>
+	</HTML>
