--- a/about us.html
+++ b/about us.html
@@ -50,6 +50,8 @@ Melbourne Indie Films
 
  <li><a href="http://www.instagram.com">Instagram</a></li>
 
+ <li><a href="research.html">Research Links</a></li>
+
  <li style = "float:right"> Copyright 2017 Melbourne Indie Films Australia. All Rights Reserved. </li>
   
   </ul>
