--- a/cbd.html
+++ b/cbd.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-	<title>Movie Catalogue - Melbourne Indie Films</title>
+	<title>Movies showing at our Richmond Venue</title>
 	<link rel="stylesheet" type="text/css" href="stylesheet.css" />
 	<style>
 	body, html {
@@ -42,7 +42,7 @@
 	</div>
 
 	<div class="catalogue_title">
-		<h1 style="padding:10px;">Now Showing</h1>
+		<h1>Movie Catalogue</h1>
 	</div>
 	<ul class="movie_gallery">
 	
@@ -54,43 +54,7 @@
 			<div class="movie_links">
 				<a href="thegodmother.html" class="buy_ticket">Buy Ticket</a>
 			</div>
-		</li>
-		<li>
-			<img src="images/movies/dyinglight.jpg" alt="Dying Light"/>
-			<div class="movie_title">
-				<p>Dying Light</p>
-			</div>
-			<div class="movie_links">
-				<a href="#" class="buy_ticket">Buy Ticket</a>
-			</div>
-		</li>
-		<li>
-			<img src="images/movies/missionz.jpg" alt="Mission Z"/>
-			<div class="movie_title">
-				<p>Mission Z</p>
-			</div>
-			<div class="movie_links">
-				<a href="#" class="buy_ticket">Buy Ticket</a>
-			</div>
-		</li>
-		<li>
-			<img src="images/movies/paws.jpg" alt="Paws"/>
-			<div class="movie_title">
-				<p>Paws</p>
-			</div>
-			<div class="movie_links">
-				<a href="#" class="buy_ticket">Buy Ticket</a>
-			</div>
-		</li>
-		<li>
-			<img src="images/movies/theprotectors.jpg" alt="The Protectors"/>
-			<div class="movie_title">
-				<p>The Protectors</p>
-			</div>
-			<div class="movie_links">
-				<a href="#" class="buy_ticket">Buy Ticket</a>
-			</div>
-		</li>
+		
 	</ul>
 	
 	<div id ="footer">
