--- a/research.html
+++ b/research.html
@@ -23,7 +23,22 @@
 	</div>
 <h1 style = "float:center;padding:20px"> RESEARCH LINKS </h1>
 <h2 style = "font-color:white"> Here are some links we used for our code and links to the images we used. </h2>
-<ul> https://www.w3schools.com/html/html_images.asp </ul>
+<ul> https://www.w3schools.com/html/html_images.asp - Images as buttons </ul>
+<ul>https://pixabay.com/ - Image for Cinema</ul> 
+
+</body>
+
+<div id ="footer">
+ 	<ul>
+ <li><a href="http://www.facebook.com">Facebook</a></li>
+
+ <li><a href="http://www.instagram.com">Instagram</a></li>
+ <li><a href="research.html">Research Links</a></li>
+
+ <li style = "float:right"> Copyright 2017 Melbourne Indie Films Australia. All Rights Reserved. </li>
+  
+  </ul>
+ 	</div>
 </html>
 
 
