--- a/venues.html
+++ b/venues.html
@@ -21,7 +21,7 @@
 		</ul>
 	</div>
 	<div class="catalogue_title">
-		<h1>Venues Catalogue</h1>
+		<h1 style="padding:10px">Cinema Location</h1>
 	</div>
 	<ul class="Venues_gallery">
 		<li>
@@ -39,7 +39,7 @@
 				<p>Richmond</p>
 			</div>
 			<div class="movie_links">
-				<a href="#" class="buy_ticket">What's showing on</a>
+				<a href="thegodmother.html" class="buy_ticket">What's showing on</a>
 			</div>
 		</li>
 		<li>
@@ -67,7 +67,7 @@
 		<ul>
 			<li><a href="http://www.facebook.com">Facebook</a></li>
 			<li><a href="http://www.instagram.com">Instagram</a></li>
-			<li style = "float:right"> Copyright 2017 Melbourne Indie Films Australia. All Rights Reserved. </li>
+			<li style = "float:right;"> Copyright 2017 Melbourne Indie Films Australia. All Rights Reserved. </li>
 		</ul>
 	</div>
 </body>
