--- a/research.html
+++ b/research.html
@@ -25,6 +25,59 @@
 <h2 style = "font-color:white"> Here are some links we used for our code and links to the images we used. </h2>
 
 
+<h1 style = "padding:30px"> Website Design </h1>
+<p>
+https://www.awwwards.com/6-web-design-trends-you-must-know-for-2015-2016.html
+</br>
+This link shows the latest trends for homepages and the ones which have won awards in the past couple of years.
+</p>
+
+<h1 style = "padding:30px"> Template Design </h1>
+<p>
+https://www.awwwards.com/6-web-design-trends-you-must-know-for-2015-2016.html
+</br>
+This link shows the latest trends for homepages and the ones which have won awards in the past couple of years.
+</p>
+
+<h1 style = "padding:30px"> HomePage Design </h1>
+<p>
+https://www.awwwards.com/6-web-design-trends-you-must-know-for-2015-2016.html
+</br>
+This link shows the latest trends for homepages and the ones which have won awards in the past couple of years.
+</p>
+
+<h1 style = "padding:30px"> Copywright Free Graphics </h1>
+<p>
+https://www.awwwards.com/6-web-design-trends-you-must-know-for-2015-2016.html
+</br>
+This link shows the latest trends for homepages and the ones which have won awards in the past couple of years.
+</p>
+
+<h1 style = "padding:30px"> Optimizing Images </h1>
+<p>
+https://www.awwwards.com/6-web-design-trends-you-must-know-for-2015-2016.html
+</br>
+This link shows the latest trends for homepages and the ones which have won awards in the past couple of years.
+</p>
+
+<h1 style = "padding:30px"> Search engine Optimization </h1>
+<p>
+https://www.awwwards.com/6-web-design-trends-you-must-know-for-2015-2016.html
+</br>
+This link shows the latest trends for homepages and the ones which have won awards in the past couple of years.
+</p>
+
+<h1 style = "padding:30px"> Essential Pages to be included in e-business sites </h1>
+<p>
+https://www.awwwards.com/6-web-design-trends-you-must-know-for-2015-2016.html
+</br>
+This link shows the latest trends for homepages and the ones which have won awards in the past couple of years.
+</p>
+
+
+
+
+
 <div id ="footer">
  	<ul>
  <li><a href="http://www.facebook.com">Facebook</a></li>
