--- a/research.html
+++ b/research.html
@@ -26,24 +26,25 @@
 
 
 <h1 style = "padding:30px"> Website Design </h1>
-<p>
-https://www.awwwards.com/6-web-design-trends-you-must-know-for-2015-2016.html
+<p><a href="https://www.awwwards.com/6-web-design-trends-you-must-know-for-2015-2016.html
+">6 Web Design Trends You Must Know For 2015-2016</a>
 </br>
 This link shows the latest trends for homepages and the ones which have won awards in the past couple of years.
 </p>
 
 <h1 style = "padding:30px"> Template Design </h1>
-<p>
-https://www.awwwards.com/6-web-design-trends-you-must-know-for-2015-2016.html
+<p><a href="https://webflow.com/blog/18-web-design-trends-for-2017
+">18 Web Design Trends for 2017</a>
+
 </br>
-This link shows the latest trends for homepages and the ones which have won awards in the past couple of years.
+This site shows a great insight into the latest template designs for good e-business websites. It keeps the user up to date with the latest template designs for 2017.
 </p>
 
 <h1 style = "padding:30px"> HomePage Design </h1>
-<p>
-https://www.awwwards.com/6-web-design-trends-you-must-know-for-2015-2016.html
+<p><a href ="https://blog.hubspot.com/blog/tabid/6307/bid/31097/12-Critical-Elements-Every-Homepage-Must-Have-Infographic.aspx#sm.00000j2peqehp3fayvh5h39avknbn"> 12 Critical Elements Every Homepage Must Have</a>
+
 </br>
-This link shows the latest trends for homepages and the ones which have won awards in the past couple of years.
+The link above lists 12 critical components that any good homepage for a website must use to gain a better user experience on the site."Serving as your company's virtual front door"
 </p>
 
 <h1 style = "padding:30px"> Copywright Free Graphics </h1>
