--- a/research.html
+++ b/research.html
@@ -69,10 +69,10 @@ This link shows the latest trends for homepages and the ones which have won awar
 </p>
 
 <h1 style = "padding:30px"> Essential Pages to be included in e-business sites </h1>
-<p>
-https://www.awwwards.com/6-web-design-trends-you-must-know-for-2015-2016.html
+<p><a href="http://www.hongkiat.com/blog/essential-things-ecommerce-site-should-have/">Essential Things E-Commerce Sites Should Have</a>
+
 </br>
-This link shows the latest trends for homepages and the ones which have won awards in the past couple of years.
+This site gives a good indication of the growing trend of e-commerce businesses that are growing online. The site gives a good insight into the key areas of the website that are needed to create a successful e-business site.
 </p>
 
 
