fixed thank you page

--- a/thankyou.html
+++ b/thankyou.html
@@ -19,7 +19,7 @@ body, html {
     background-image: url("images/cinema.jpg");
 
     /* Full height */
-    height: 75%; 
+    height: 100%; 
 
     /* Center and scale the image nicely */
     background-position: center;
@@ -50,14 +50,29 @@ body, html {
 
 <div class="jumbotron text-xs-center">
   <h1 style = "float:center;padding:20px"> Thank you</h1>
-  <p class="lead"><strong>The tickets have been sent to your email ! Enjoy the movie :) </strong> </p>
-  <hr>
+  <p class="lead">The tickets have been sent to your email ! Enjoy the movie :) </p>
+ 
   <p>
     Having trouble? <a href="contact us.html">Contact us</a>
   </p>
   <p class="lead">
     <a class="btn btn-primary btn-sm" href="homepage.html" role="button">Continue to homepage</a>
   </p>
+  <div class = venue-button>
+  <p> At this venue <br/ >
+  <a href="venues.html">
+  <img border="0" alt="venue" src="images/venues/richmond.jpg" width="400" height = "400"> </a>
+  </p>
+  </div>
+
+
+
+  <div class = "movie-button">
+   <p>You are seeing <br/ >
+   <a href ="catalogue.html">
+   <img border="0" alt="movie" src="images/movies/godmother.jpg" width="200" height="400"> </a>
+</p>
+</div>
 
 </div>
 </div>
