--- a/login.html
+++ b/login.html
@@ -59,6 +59,10 @@
 							<input type="text" placeholder="name"/>
 							<input type="password" placeholder="password"/>
 							<input type="text" placeholder="email address"/>
+							<label>
+							<input type="checkbox" name="newsletter">
+							Subscribe to our newsletter</label>
+
 							<button>create</button>
 							<p class="message">Already registered? <a href="#">Sign In</a></p>
 						</form>
@@ -77,6 +81,7 @@
 				<div id ="footer">
 					<ul>
 						<li><a href="http://www.facebook.com">Facebook</a></li>
+						 <li><a href="research.html">Research Links</a></li>
 						<li><a href="http://www.instagram.com">Instagram</a></li>
 					</ul>
 				</div>
