--- a/thankyou.html
+++ b/thankyou.html
@@ -82,6 +82,8 @@ body, html {
  <li><a href="http://www.facebook.com">Facebook</a></li>
 
  <li><a href="http://www.instagram.com">Instagram</a></li>
+ 
+  <li><a href="research.html">Research Links</a></li>
 
  <li style = "float:right"> Copyright 2017 Melbourne Indie Films Australia. All Rights Reserved. </li>
   
