--- a/homepage.html
+++ b/homepage.html
@@ -86,6 +86,8 @@ body, html {
 
  <li><a href="http://www.instagram.com">Instagram</a></li>
 
+  <li><a href="research.html">Research Links</a></li>
+
  <li style = "float:right"> Copyright 2017 Melbourne Indie Films Australia. All Rights Reserved. </li>
   
   </ul>
