--- a/thankyou.html
+++ b/thankyou.html
@@ -18,16 +18,12 @@
       /* The image used */
       background-image: url("images/cinema.jpg");
 
-<<<<<<< HEAD
       /* Full height */
-      height: 75%; 
-=======
+      height: 100%; 
+
     /* Full height */
     height: 100%; 
-<<<<<<< Updated upstream
-=======
->>>>>>> origin/master
->>>>>>> Stashed changes
+
 
       /* Center and scale the image nicely */
       background-position: center;
@@ -56,18 +52,8 @@
   </div>
   <div class="bg">
 
-<<<<<<< HEAD
-    <div class="jumbotron text-xs-center">
-      <h1 style = "float:center;padding:20px"> Thank you</h1>
-      <p class="lead"><strong>The tickets have been sent to your email ! Enjoy the movie :) </strong> </p>
-      <hr>
-      <p>
-        Having trouble? <a href="contact us.html">Contact us</a>
-      </p>
-      <p class="lead">
-        <a class="btn btn-primary btn-sm" href="homepage.html" role="button">Continue to homepage</a>
-      </p>
-=======
+
+    
 <div class="jumbotron text-xs-center">
   <h1 style = "float:center;padding:20px"> Thank you</h1>
   <p class="lead">The tickets have been sent to your email ! Enjoy the movie :) </p>
@@ -81,21 +67,10 @@
   <div class = venue-button>
   <p> At this venue <br/ >
   <a href="venues.html">
-  <img border="0" alt="venue" src="images/venues/richmond.jpg" width="400" height = "400"> </a>
+  <img border="0" alt="venue" src="images/venues/Richmond.jpg" width="400" height = "400"> </a>
   </p>
   </div>
-<<<<<<< Updated upstream
 
-
-
-  <div class = "movie-button">
-   <p>You are seeing <br/ >
-   <a href ="catalogue.html">
-   <img border="0" alt="movie" src="images/movies/godmother.jpg" width="200" height="400"> </a>
-</p>
-</div>
-=======
->>>>>>> Stashed changes
 
 
 
@@ -105,7 +80,9 @@
    <img border="0" alt="movie" src="images/movies/godmother.jpg" width="200" height="400"> </a>
 </p>
 </div>
->>>>>>> origin/master
+
+
+
 
     </div>
   </div>
@@ -114,13 +91,13 @@
   <ul>
    <li><a href="http://www.facebook.com">Facebook</a></li>
 
-<<<<<<< HEAD
+
  <li><a href="http://www.instagram.com">Instagram</a></li>
  
   <li><a href="research.html">Research Links</a></li>
-=======
+
    <li><a href="http://www.instagram.com">Instagram</a></li>
->>>>>>> origin/master
+
 
    <li style = "float:right"> Copyright 2017 Melbourne Indie Films Australia. All Rights Reserved. </li>
    
