--- a/venues.html
+++ b/venues.html
@@ -25,7 +25,7 @@
 	</div>
 	<ul class="Venues_gallery">
 		<li>
-			<img src="images/Venues/cbd.jpg" alt="cbd"/>
+			<img src="images/venues/cbd.jpg" alt="cbd"/>
 			<div class="Venues_title">
 				<p>CBD</p>
 			</div>
@@ -34,7 +34,7 @@
 			</div>
 		</li>
 		<li>
-			<img src="images/Venues/Richmond.jpg" alt="Richmond"/>
+			<img src="images/venues/Richmond.jpg" alt="Richmond"/>
 			<div class="Venues_title">
 				<p>Richmond</p>
 			</div>
@@ -43,7 +43,7 @@
 			</div>
 		</li>
 		<li>
-			<img src="images/Venues/St Kilda.jpg" alt="St Kilda"/>
+			<img src="images/venues/st kilda.jpg" alt="St Kilda"/>
 			<div class="Venues_title">
 				<p>St Kilda</p>
 			</div>
@@ -52,7 +52,7 @@
 			</div>
 		</li>
 		<li>
-			<img src="images/Venues/Frankston.jpg" alt="Frankston"/>
+			<img src="images/venues/frankston.jpg" alt="Frankston"/>
 			<div class="Venues_title">
 				<p>Frankston</p>
 			</div>
